--- a/backend/package.json
+++ b/backend/package.json
@@ -10,11 +10,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-rate-limit": "^6.0.5",
     "helmet": "^5.0.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
+    "mongoose-unique-validator": "^3.0.0",
+    "multer": "^1.4.4",
     "path": "^0.12.7"
   }
 }
